# lnq-segmenter

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/lnq_segmenter/: __init__.py  _registry.json  cache.py  cli.py  download.py  predict.py  registry.py
